CSS fixed input on Firefox #259

--- a/client/app/views/styles/_popover.styl
+++ b/client/app/views/styles/_popover.styl
@@ -53,6 +53,9 @@ input-color   = #555
         width         100%
         border-bottom 1px solid #ddd
 
+        input
+            height 3em
+
     input
         box-sizing: border-box
         margin: 0px
